--- a/Bot/recipebotconfig.ini
+++ b/Bot/recipebotconfig.ini
@@ -1,5 +1,5 @@
 [DiscordBot]
-token = OTA5NTY3MzAzMzIwOTkzODgy.YZGKkA.LNxieM47DJbYQW8omWRtzReTSdg
+token = <token>
 channel = recipebot
 
 [MongoDB]
