--- a/Backend/flaskapp/requirements.txt
+++ b/Backend/flaskapp/requirements.txt
@@ -1,5 +1,7 @@
 Flask>=2.0.2
 Flask-RESTful>=0.3.9
-Flask-PyMongo>=2.3.0
+flask-mongoengine>=1.0.0
 requests>=2.26.0
 fastapi>=0.70.0
+argon2-cffi>=20.1.0
+Flask-JWT-Extended>=4.3.1
