changed collection names

--- a/Bot/recipebotconfig.ini
+++ b/Bot/recipebotconfig.ini
@@ -4,6 +4,6 @@ channel = recipebot
 
 [MongoDB]
 database = RecipeBot
-banned_users_collection = BannedUsers
-recipes_collection = Recipes
+banned_users_collection = bannedusers
+recipes_collection = recipes
 mongodb_address = mongodb://localhost:27017/
