Banned users list without new creation

--- a/Bot/recipebotconfig.ini
+++ b/Bot/recipebotconfig.ini
@@ -4,6 +4,6 @@ channel = recipebot
 
 [MongoDB]
 database = RecipeBot
-banned_users_collection = bannedusers
+banned_users_collection = banned_users
 recipes_collection = recipes
 mongodb_address = mongodb://localhost:27017/
