--- a/Bot/recipebotconfig.ini
+++ b/Bot/recipebotconfig.ini
@@ -1,9 +1,7 @@
 [DiscordBot]
-token = <token>
+token = OTA5NTY3MzAzMzIwOTkzODgy.YZGKkA.uVXnMYCmING4cu0hyhHbvJqiyUE
 channel = recipebot
 
 [MongoDB]
-database = RecipeBot
 banned_users_collection = banned_users
 recipes_collection = recipes
-mongodb_address = mongodb://localhost:27017/
