--- a/Backend/nginx/Dockerfile
+++ b/Backend/nginx/Dockerfile
@@ -1,14 +1,7 @@
-FROM alpine:latest
+FROM nginx:1.21.4
 
-RUN apk --update add nginx && \
-    ln -sf /dev/stdout /var/log/nginx/access.log && \
-    ln -sf /dev/stderr /var/log/nginx/error.log && \
-    mkdir /etc/nginx/sites-enabled/ && \
-    mkdir -p /run/nginx && \
-    rm -rf /etc/nginx/http.d/default.conf && \
-    rm -rf /var/cache/apk/*
+RUN  rm -rf /etc/nginx/http.d/default.conf
 
 COPY http.d/app.conf /etc/nginx/http.d/app.conf
 
 EXPOSE 80 443
-CMD ["nginx", "-g", "daemon off;"]
