Fixed nginx reverse proxy

--- a/Bot/recipebotconfig.ini
+++ b/Bot/recipebotconfig.ini
@@ -1,5 +1,5 @@
 [DiscordBot]
-token = OTA5NTY3MzAzMzIwOTkzODgy.YZGKkA.uVXnMYCmING4cu0hyhHbvJqiyUE
+token = <token>
 channel = recipebot
 
 [MongoDB]
