--- a/AdminPage/Dockerfile
+++ b/AdminPage/Dockerfile
@@ -14,8 +14,9 @@ RUN npm run ng build --configuration=production --output-path=dist
 
 FROM nginx:1.21.4
 
-RUN  rm -rf /etc/nginx/http.d/default.conf
-COPY http.d/app.conf /etc/nginx/http.d/app.conf
+RUN  rm -rf /etc/nginx/conf.d/default.conf
+
+COPY conf.d/app.conf /etc/nginx/conf.d/app.conf
 
 WORKDIR /usr/share/nginx/html
 RUN rm -rf ./*
