--- a/Backend/nginx/conf.d/proxy.conf
+++ b/Backend/nginx/conf.d/proxy.conf
@@ -1,19 +1,36 @@
 server {
-    listen 80;
+    listen 443 ssl;
     server_name "_";
     error_log  /var/log/nginx/error.log;
     access_log /var/log/nginx/access.log;
     client_max_body_size 64M;
 
+    ssl_certificate /etc/nginx/certs/example.crt;
+    ssl_certificate_key /etc/nginx/certs/example.key;
+    ssl_verify_client off;
+
     location / {
         gzip_static on;
 
+        add_header 'Content-Security-Policy' 'upgrade-insecure-requests';
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host $http_host;
         proxy_buffering off;
         proxy_redirect off;
         proxy_pass http://adminpage;
+    }
+
+    location /api {
+        gzip_static on;
+
+        add_header 'Content-Security-Policy' 'upgrade-insecure-requests';
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $http_host;
+        proxy_buffering off;
+        proxy_redirect off;
+        proxy_pass http://flask:5000;
     }
 
 }
