--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,6 +94,7 @@ services:
       - "443:443"
     volumes:
       - nginxdata:/var/log/nginx
+      - ./Cert:/etc/nginx/certs
     depends_on:
       - flask
       - adminpage
