Fixed some faulty functions

--- a/Bot/recipebotconfig.ini
+++ b/Bot/recipebotconfig.ini
@@ -1,5 +1,5 @@
 [DiscordBot]
-token = <token>
+token = OTA5NTY3MzAzMzIwOTkzODgy.YZGKkA.mBIzAl_1n4ExwkwVMlj80ssSiQA
 channel = recipebot
 
 [MongoDB]
